kubernetes/manifests/ingress-nginx/rc-test.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
spec: 
---
apiVersion: v1
kind: Service
metadata:
  name: myapp-rc
  namespace: test-ns
spec:
 # type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myapp-rc
