kubernetes/manifests/ingress-nginx/ingress-test-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp-tls
  namespace: test-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - myapp.example.com
    secretName: myapp-ingress-secret 
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp-rc
          servicePort: 80
