kubernetes/manifests/ingress-nginx/ingress-test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: test-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp-rc
          servicePort: 80
